--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
     This is a placeholder for base href that will be replaced by the value of
     the `--base-href` argument provided to `flutter build`.
   -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDM80KzkiLqRMqHE4lEYl-2jGapbssxpBE"></script>
   <base href="$FLUTTER_BASE_HREF">
 
   <meta charset="UTF-8">
